# nerdy-doorkey

./: .gitignore  .nedok.toml.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  COMMANDS.md  README.md  VERSIONING.md  WORKLOG.md  build.sh  main.py  nedok.spec  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: __init__.py  dual_pane_browser.py
src/dual_pane_browser/: __init__.py  browser.py  colors.py  config.py  file_operations.py  git_operations.py  git_status.py  help_text.py  input_handlers.py  modes.py  render.py  render_dialogs.py  render_utils.py  ssh_connection.py  state.py
src/nedok/: __init__.py  browser.py  cli.py  colors.py  config.py  file_operations.py  formatting.py  git_operations.py  git_status.py  help_text.py  input_handlers.py  modes.py  render.py  render_dialogs.py  render_utils.py  ssh_connection.py  state.py
tests/: test_browser_git_operations.py  test_colors.py  test_config.py  test_formatting.py  test_git_status.py  test_help_text.py  test_main.py  test_modes.py  test_new_features.py  test_state.py  test_tree_mode.py
